# changelog-generator2

./: .changelog.yaml  .changelog.yaml.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_20250111_120037.md  CHANGELOG_20250112_140519.md  LICENSE  README.md  __init__.py  ai_provider_manager.py  changelog_config.py  changelog_generator.py  changelog_utils.py  config.py  current_architecture.mmd  generator.py  improved_architecture.mmd  pyproject.toml  requirements.txt  setup.py  test_changelog_generator.py  test_enhanced_cli.py
.github/workflows/: generate_changelog.yml
changelog_generator/: __init__.py  ai_changelog.py  ai_provider_manager.py  anthropic_provider.py  base_ai_provider.py  changelog_config.py  changelog_utils.py  config_models.py  generator.py  git_utils.py  main.py  ollama_provider.py  xai_provider.py
changelog_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
changelog_generator/cli/: __init__.py  commands.py  ui.py  validation.py
changelog_generator/core/: __init__.py  changelog_generator.py
changelog_generator/templates/: html_template.j2  markdown_template.j2
tests/: test_changelog_generator.py  test_changelog_generator_new.py  test_changelog_utils.py  test_enhanced_cli.py  test_output_formats.py
